attribution class's role update to aria-role

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </section>
 
 
-  <div class="attribution" role = "footer">
+  <div class="attribution" aria-role = "footer">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://www.frontendmentor.io/profile/ratan17">SPYDER</a>.
   </div>
